# story-book-generator

./: .gitignore  .gitmodules  README.md  novels.sh  requirements.sh  scene-split.sh  scraper.sh  scraping.py  text_cleaning.py
audio/: generate_tts.py
chromedriver/: __init__.py  driver.py  update.py
mobileApp/: settings.gradle.kts
mobileApp/app/: build.gradle.kts
mobileApp/app/src/androidTest/java/com/lebel/bingenovel/: ExampleInstrumentedTest.kt
mobileApp/app/src/androidTest/java/com/lebel/novelbinge/: ExampleInstrumentedTest.kt
mobileApp/app/src/main/: AndroidManifest.xml
mobileApp/app/src/main/res/layout/: activity_main.xml  fragment_first.xml  fragment_novel_list.xml  fragment_readnovel.xml  fragment_second.xml  novel_card_recycler_view.xml
mobileApp/app/src/main/res/menu/: menu_main.xml
mobileApp/app/src/main/res/navigation/: nav_graph.xml
mobileApp/app/src/main/res/values/: strings.xml  themes.xml
mobileApp/app/src/main/res/values-night/: themes.xml
mobileApp/app/src/main/res/values-v23/: themes.xml
mobileApp/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
mobileApp/gradle/: libs.versions.toml
mobileApp/gradle/wrapper/: gradle-wrapper.properties
novels/: handler.py  pyproject.toml
novels/novel_storage/: __init__.py  handler.py
scenes/: splitting.py
scraper/: __init__.py  novel.py  requirements.txt  scraping.py  text_cleaning.py
scraper/chromedriver/: driver.py  update.py
scraper/scrapers/: __init__.py  factory.py  novel_scraper.py  strategy.py  webnovel.py
storage_handler/: __init__.py  handler.py
(+14 files in other folders)
