[project]
name = "novel_storage"
version = "0.0.1"
authors = [
    { name="Plads" },
]
description = "Read and write scraped novel data to the drive"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
